# AIVoiceAssistant

./: .gitignore  README.md  hello.py  pyproject.toml  requirements.txt  requirements_local.txt
src/: app.py  app_cloud.py  audio_io.py  latency_tracker.py  llm.py  pipeline.py  stt.py  tts.py
tests/: test_mock_pipeline.py
