[project]
name = "aivoiceassistant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "groq>=1.1.1",
    "numpy>=2.4.3",
    "openai>=2.29.0",
    "pyaudio>=0.2.14",
    "python-dotenv>=1.2.2",
    "pyttsx3>=2.99",
    "scipy>=1.17.1",
    "setuptools>=82.0.1",
    "sounddevice>=0.5.5",
    "streamlit>=1.55.0",
    "webrtcvad>=2.0.10",
]
