[project]
name = "aivoiceassistant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "groq>=1.1.1",
    "numpy>=2.4.3",
    "openai>=2.29.0",
    "python-dotenv>=1.2.2",
    "scipy>=1.17.1",
    "streamlit>=1.55.0",
]
